# meeting-copilot

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pytest.ini
cpp/: CMakeLists.txt  audio_preprocess.cpp  audio_preprocess.hpp  bindings.cpp  transcriber.cpp  transcriber.hpp
data/annotations/: README.md  annotated_sync.txt
data/audio/: README.md
docs/notes/: day1-setup-notes.md  day2-audio-pipeline-notes.md  day3-pybind-integration-notes.md
docs/testing/: day1-test-report.md  day2-test-report.md  day3-test-report.md
docs/versions/: day1-v0.1.0.md  day1-v0.1.1.md  day2-v0.2.0.md  day3-v0.3.0.md
experiments/: README.md
frontend/templates/: index.html
python/: app.py
python/meeting_copilot/: __init__.py  app.py  bridge.py  config.py  schemas.py
python/meeting_copilot/routers/: __init__.py  transcribe.py
python/meeting_copilot/services/: __init__.py  transcription.py
reports/: README.md
reports/transcriptions/: README.md
scripts/: create_conda_env.ps1  install_miniconda.ps1  run_api.ps1  run_tests.ps1
tests/: test_app.py
tests/fixtures/: README.md
